# linalgcpp

./: .gitignore  CMakeLists.txt
include/: sparsematrix.hpp
modules/partition/: CMakeLists.txt
modules/partition/examples/: CMakeLists.txt  condugate_gradient.hpp  graphIO.hpp  lubys_partition.hpp  parallel_utility.hpp  partition_example.cpp  randomGen.hpp
modules/partition/examples/data/: amazon_m_0.edges  simple_graph_0.edges  simple_graph_1.edges  simple_graph_1.graph  simple_graph_2.edges  simple_graph_2.graph  usaco_graph_1.edges  usaco_graph_2.edges  usaco_graph_3.edges  usaco_graph_4.edges  usaco_graph_5.edges  usaco_graph_6.edges  usaco_graph_7.edges  usaco_graph_8.edges  usaco_graph_9.edges
modules/partition/include/: partition.hpp
modules/partition/src/: partitioner.cpp
modules/partition/tests/: test_partition.cpp
tests/: test_linalg.cpp
